--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8081
 
+ehree:
+  api-basepackage: com.hxl.api
+
 logging:
   pattern:
     console: "[%thread] %-5level %logger{36} - %msg%n"
