--- a/src/main/resources/config/exception-code.properties
+++ b/src/main/resources/config/exception-code.properties
@@ -1,10 +1,10 @@
 ehree.codes[0] = ok
-ehree.codes[999] = 服务器未知异常
+ehree.codes[999] = \u670D\u52A1\u5668\u672A\u77E5\u5F02\u5E38
 
-ehree.codes[10000] = 通用错误
-ehree.codes[10001] = normal error
-ehree.codes[10002] = 资源未找到
-ehree.codes[10003] = 没有找到合适的登陆处理方法
-ehree.codes[10004] = 令牌不合法或者过期
-ehree.codes[10005] = 用户未被授权
-ehree.codes[10006] = 登陆失败
+ehree.codes[10000] = \u901A\u7528\u9519\u8BEF
+ehree.codes[10001] = \u901A\u7528\u53C2\u6570\u9519\u8BEF
+ehree.codes[10002] = \u8D44\u6E90\u672A\u627E\u5230
+ehree.codes[10003] = \u6CA1\u6709\u627E\u5230\u5408\u9002\u7684\u767B\u9646\u5904\u7406\u65B9\u6CD5
+ehree.codes[10004] = \u4EE4\u724C\u4E0D\u5408\u6CD5\u6216\u8005\u8FC7\u671F
+ehree.codes[10005] = \u7528\u6237\u672A\u88AB\u6388\u6743
+ehree.codes[10006] = \u767B\u9646\u5931\u8D25
