--- a/src/main/resources/config/exception-code.properties
+++ b/src/main/resources/config/exception-code.properties
@@ -8,3 +8,16 @@ ehree.codes[10003] = \u6CA1\u6709\u627E\u5230\u5408\u9002\u7684\u767B\u9646\u590
 ehree.codes[10004] = \u4EE4\u724C\u4E0D\u5408\u6CD5\u6216\u8005\u8FC7\u671F
 ehree.codes[10005] = \u7528\u6237\u672A\u88AB\u6388\u6743
 ehree.codes[10006] = \u767B\u9646\u5931\u8D25
+
+ehree.codes[30000] = \u5546\u54C1\u7C7B\u901A\u7528\u9519\u8BEF
+ehree.codes[30001] = \u5206\u7C7B\u4E0D\u5B58\u5728
+ehree.codes[30002] = \u5546\u54C1\u4FE1\u606F\u4E0D\u5B58
+ehree.codes[30003] = \u4E3B\u9898\u4E0D\u5B58\u5728
+ehree.codes[30004] = complexity\u53C2\u6570\u9519\u8BEF
+ehree.codes[30005] = Banner\u7C7B\u8D44\u6E90\u4E0D\u5B58\u5728
+ehree.codes[30006] = \u5F53\u524D\u6682\u4E0D\u652F\u6301\u7EA7\u8054\u83B7\u53D6sku-list
+ehree.codes[30007] = \u5F53\u524D\u6682\u4E0D\u652F\u6301\u7EA7\u8054\u83B7\u53D6spu-list\uFF0C\u8BF7\u8C03\u7528\u5176\u4ED6\u63A5\u53E3
+ehree.codes[30008] = \u5F53\u524D\u6CA1\u6709\u66F4\u591A\u7684\u5546\u54C1\u4FE1\u606F\u4E86
+ehree.codes[30009] = Grid\u5206\u7C7B\u4E0D\u5B58\u5728
+ehree.codes[30010] = \u8BF7\u6C42\u7684\u5355\u54C1\u5217\u8868\u4E0D\u5B58\u5728
+ehree.codes[30011] = \u8BF7\u6C42\u7684\u5546\u54C1SaleExplain\u4E0D\u5B58\u5728
