--- a/src/main/resources/config/exception-code.properties
+++ b/src/main/resources/config/exception-code.properties
@@ -9,6 +9,12 @@ ehree.codes[10004] = \u4EE4\u724C\u4E0D\u5408\u6CD5\u6216\u8005\u8FC7\u671F
 ehree.codes[10005] = \u7528\u6237\u672A\u88AB\u6388\u6743
 ehree.codes[10006] = \u767B\u9646\u5931\u8D25
 
+ehree.codes[20000] = \u7528\u6237\u7C7B\u901A\u7528\u9519\u8BEF
+ehree.codes[20001] = \u7528\u6237\u5DF2\u5B58\u5728
+ehree.codes[20002] = \u7528\u6237\u4E0D\u5B58\u5728
+ehree.codes[20003] = \u7528\u6237\u5BC6\u7801\u9519\u8BEF
+ehree.codes[20004] = \u83B7\u53D6\u7528\u6237wx openid\u5931\u8D25
+
 ehree.codes[30000] = \u5546\u54C1\u7C7B\u901A\u7528\u9519\u8BEF
 ehree.codes[30001] = \u5206\u7C7B\u4E0D\u5B58\u5728
 ehree.codes[30002] = \u5546\u54C1\u4FE1\u606F\u4E0D\u5B58
