:construction: 首页活动api完成

--- a/src/main/resources/config/exception-code.properties
+++ b/src/main/resources/config/exception-code.properties
@@ -27,3 +27,17 @@ ehree.codes[30008] = \u5F53\u524D\u6CA1\u6709\u66F4\u591A\u7684\u5546\u54C1\u4FE
 ehree.codes[30009] = Grid\u5206\u7C7B\u4E0D\u5B58\u5728
 ehree.codes[30010] = \u8BF7\u6C42\u7684\u5355\u54C1\u5217\u8868\u4E0D\u5B58\u5728
 ehree.codes[30011] = \u8BF7\u6C42\u7684\u5546\u54C1SaleExplain\u4E0D\u5B58\u5728
+
+ehree.codes[40000] = \u6D3B\u52A8\u4E0E\u4F18\u60E0\u5238\u901A\u7528\u9519\u8BEF
+ehree.codes[40001] = \u672A\u627E\u5230\u9996\u9875\u4F18\u60E0\u5238\u6D3B\u52A8
+ehree.codes[40002] = \u672A\u627E\u5230\u5546\u54C1\u53EF\u7528\u4F18\u60E0\u5238
+ehree.codes[40003] = \u672A\u627E\u5230\u6D3B\u52A8\u5C01\u9762
+ehree.codes[40004] = \u672A\u627E\u5230\u4F18\u60E0\u5238
+ehree.codes[40005] = \u4F18\u60E0\u5238\u5DF2\u8FC7\u671F
+ehree.codes[40006] = \u60A8\u5DF2\u7ECF\u9886\u53D6\u4E86\u8FD9\u5F20\u4F18\u60E0\u5238
+ehree.codes[40007] = \u4F18\u60E0\u5238\u5DF2\u88AB\u4F7F\u7528\uFF0C\u4E0D\u80FD\u91CD\u590D\u4F7F\u7528
+ehree.codes[40008] = \u4F18\u60E0\u5238\u4E0D\u6EE1\u8DB3\u4F7F\u7528\u6761\u4EF6
+ehree.codes[40009] = \u4E0D\u652F\u6301\u7684\u4F18\u60E0\u5238\u7C7B\u578B
+ehree.codes[40010] = \u672A\u627E\u5230\u4F18\u60E0\u5238\u5BF9\u5E94\u7684\u6D3B\u52A8
+ehree.codes[40011] = \u4F18\u60E0\u5238\u53EA\u5B58\u5728\u53EF\u4F7F\u7528/\u5DF2\u4F7F\u7528/\u5DF2\u8FC7\u671F\u7684\u60C5\u51B5
+ehree.codes[40012] = \u4F18\u60E0\u5238\u6838\u9500\u5931\u8D25
