--- a/src/main/resources/config/exception-code.properties
+++ b/src/main/resources/config/exception-code.properties
@@ -41,3 +41,16 @@ ehree.codes[40009] = \u4E0D\u652F\u6301\u7684\u4F18\u60E0\u5238\u7C7B\u578B
 ehree.codes[40010] = \u672A\u627E\u5230\u4F18\u60E0\u5238\u5BF9\u5E94\u7684\u6D3B\u52A8
 ehree.codes[40011] = \u4F18\u60E0\u5238\u53EA\u5B58\u5728\u53EF\u4F7F\u7528/\u5DF2\u4F7F\u7528/\u5DF2\u8FC7\u671F\u7684\u60C5\u51B5
 ehree.codes[40012] = \u4F18\u60E0\u5238\u6838\u9500\u5931\u8D25
+
+ehree.codes[50000] = \u8BA2\u5355\u901A\u7528\u7C7B\u9519\u8BEF
+ehree.codes[50001] = \u8BA2\u5355\u4E2D\u6709\u5546\u54C1\u5DF2\u552E\u7F44
+ehree.codes[50002] = \u8BA2\u5355\u4E2D\u6709\u5DF2\u4E0B\u67B6\u5546\u54C1
+ehree.codes[50003] = \u8BA2\u5355\u4E2D\u6709\u5546\u54C1\u5E93\u5B58\u4E0D\u8DB3
+ehree.codes[50004] = \u8BA2\u5355\u4E2D\u6709\u5546\u54C1\u8D85\u51FA\u4E86\u8D2D\u4E70\u4E0A\u9650
+ehree.codes[50005] = \u8BA2\u5355\u91D1\u989D\u4E0E\u5B9E\u9645\u91D1\u989D\u4E0D\u5339\u914D,\u53EF\u80FD\u67D0\u4E9B\u5546\u54C1\u4EF7\u683C\u6709\u6D6E\u52A8
+ehree.codes[50006] = \u7528\u6237\u6CA1\u6709\u8FD9\u5F20\u4F18\u60E0\u5238
+ehree.codes[50007] = \u8BA2\u5355\u4E2D\u7684\u5546\u54C1\u6570\u91CF\u4E0D\u80FD\u662F0\u4EF6
+ehree.codes[50008] = \u8BA2\u5355\u4F18\u60E0\u91D1\u989D\u4E0E\u5B9E\u9645\u4F18\u60E0\u91D1\u989D\u4E0D\u5339\u914D
+ehree.codes[50009] = \u8BA2\u5355\u4E0D\u5B58\u5728
+ehree.codes[50010] = \u8BA2\u5355\u5DF2\u8FC7\u671F
+ehree.codes[50011] = \u5546\u54C1\u5E76\u4E0D\u514D\u8D39~
