--- a/src/main/resources/config/exception-code.properties
+++ b/src/main/resources/config/exception-code.properties
@@ -1,56 +1,56 @@
 ehree.codes[0] = ok
-ehree.codes[9999] = \u670D\u52A1\u5668\u672A\u77E5\u5F02\u5E38
+ehree.codes[9999] = 服务器未知异常
 
-ehree.codes[10000] = \u901A\u7528\u9519\u8BEF
-ehree.codes[10001] = \u901A\u7528\u53C2\u6570\u9519\u8BEF
-ehree.codes[10002] = \u8D44\u6E90\u672A\u627E\u5230
-ehree.codes[10003] = \u6CA1\u6709\u627E\u5230\u5408\u9002\u7684\u767B\u9646\u5904\u7406\u65B9\u6CD5
-ehree.codes[10004] = \u4EE4\u724C\u4E0D\u5408\u6CD5\u6216\u8005\u8FC7\u671F
-ehree.codes[10005] = \u7528\u6237\u672A\u88AB\u6388\u6743
-ehree.codes[10006] = \u767B\u9646\u5931\u8D25
+ehree.codes[10000] = 通用错误
+ehree.codes[10001] = 通用参数错误
+ehree.codes[10002] = 资源未找到
+ehree.codes[10003] = 没有找到合适的登陆处理方法
+ehree.codes[10004] = 令牌不合法或者过期
+ehree.codes[10005] = 用户未被授权
+ehree.codes[10006] = 登陆失败
 
-ehree.codes[20000] = \u7528\u6237\u7C7B\u901A\u7528\u9519\u8BEF
-ehree.codes[20001] = \u7528\u6237\u5DF2\u5B58\u5728
-ehree.codes[20002] = \u7528\u6237\u4E0D\u5B58\u5728
-ehree.codes[20003] = \u7528\u6237\u5BC6\u7801\u9519\u8BEF
-ehree.codes[20004] = \u83B7\u53D6\u7528\u6237wx openid\u5931\u8D25
+ehree.codes[20000] = 用户类通用错误
+ehree.codes[20001] = 用户已存在
+ehree.codes[20002] = 用户不存在
+ehree.codes[20003] = 用户密码错误
+ehree.codes[20004] = 获取用户wx openid失败
 
-ehree.codes[30000] = \u5546\u54C1\u7C7B\u901A\u7528\u9519\u8BEF
-ehree.codes[30001] = \u5206\u7C7B\u4E0D\u5B58\u5728
-ehree.codes[30002] = \u5546\u54C1\u4FE1\u606F\u4E0D\u5B58
-ehree.codes[30003] = \u4E3B\u9898\u4E0D\u5B58\u5728
-ehree.codes[30004] = complexity\u53C2\u6570\u9519\u8BEF
-ehree.codes[30005] = Banner\u7C7B\u8D44\u6E90\u4E0D\u5B58\u5728
-ehree.codes[30006] = \u5F53\u524D\u6682\u4E0D\u652F\u6301\u7EA7\u8054\u83B7\u53D6sku-list
-ehree.codes[30007] = \u5F53\u524D\u6682\u4E0D\u652F\u6301\u7EA7\u8054\u83B7\u53D6spu-list\uFF0C\u8BF7\u8C03\u7528\u5176\u4ED6\u63A5\u53E3
-ehree.codes[30008] = \u5F53\u524D\u6CA1\u6709\u66F4\u591A\u7684\u5546\u54C1\u4FE1\u606F\u4E86
-ehree.codes[30009] = Grid\u5206\u7C7B\u4E0D\u5B58\u5728
-ehree.codes[30010] = \u8BF7\u6C42\u7684\u5355\u54C1\u5217\u8868\u4E0D\u5B58\u5728
-ehree.codes[30011] = \u8BF7\u6C42\u7684\u5546\u54C1SaleExplain\u4E0D\u5B58\u5728
+ehree.codes[30000] = 商品类通用错误
+ehree.codes[30001] = 分类不存在
+ehree.codes[30002] = 商品信息不存
+ehree.codes[30003] = 主题不存在
+ehree.codes[30004] = complexity参数错误
+ehree.codes[30005] = Banner类资源不存在
+ehree.codes[30006] = 当前暂不支持级联获取sku-list
+ehree.codes[30007] = 当前暂不支持级联获取spu-list，请调用其他接口
+ehree.codes[30008] = 当前没有更多的商品信息了
+ehree.codes[30009] = Grid分类不存在
+ehree.codes[30010] = 请求的单品列表不存在
+ehree.codes[30011] = 请求的商品SaleExplain不存在
 
-ehree.codes[40000] = \u6D3B\u52A8\u4E0E\u4F18\u60E0\u5238\u901A\u7528\u9519\u8BEF
-ehree.codes[40001] = \u672A\u627E\u5230\u9996\u9875\u4F18\u60E0\u5238\u6D3B\u52A8
-ehree.codes[40002] = \u672A\u627E\u5230\u5546\u54C1\u53EF\u7528\u4F18\u60E0\u5238
-ehree.codes[40003] = \u672A\u627E\u5230\u6D3B\u52A8\u5C01\u9762
-ehree.codes[40004] = \u672A\u627E\u5230\u4F18\u60E0\u5238
-ehree.codes[40005] = \u4F18\u60E0\u5238\u5DF2\u8FC7\u671F
-ehree.codes[40006] = \u60A8\u5DF2\u7ECF\u9886\u53D6\u4E86\u8FD9\u5F20\u4F18\u60E0\u5238
-ehree.codes[40007] = \u4F18\u60E0\u5238\u5DF2\u88AB\u4F7F\u7528\uFF0C\u4E0D\u80FD\u91CD\u590D\u4F7F\u7528
-ehree.codes[40008] = \u4F18\u60E0\u5238\u4E0D\u6EE1\u8DB3\u4F7F\u7528\u6761\u4EF6
-ehree.codes[40009] = \u4E0D\u652F\u6301\u7684\u4F18\u60E0\u5238\u7C7B\u578B
-ehree.codes[40010] = \u672A\u627E\u5230\u4F18\u60E0\u5238\u5BF9\u5E94\u7684\u6D3B\u52A8
-ehree.codes[40011] = \u4F18\u60E0\u5238\u53EA\u5B58\u5728\u53EF\u4F7F\u7528/\u5DF2\u4F7F\u7528/\u5DF2\u8FC7\u671F\u7684\u60C5\u51B5
-ehree.codes[40012] = \u4F18\u60E0\u5238\u6838\u9500\u5931\u8D25
+ehree.codes[40000] = 活动与优惠券通用错误
+ehree.codes[40001] = 未找到首页优惠券活动
+ehree.codes[40002] = 未找到商品可用优惠券
+ehree.codes[40003] = 未找到活动封面
+ehree.codes[40004] = 未找到优惠券
+ehree.codes[40005] = 优惠券已过期
+ehree.codes[40006] = 您已经领取了这张优惠券
+ehree.codes[40007] = 优惠券已被使用，不能重复使用
+ehree.codes[40008] = 优惠券不满足使用条件
+ehree.codes[40009] = 不支持的优惠券类型
+ehree.codes[40010] = 未找到优惠券对应的活动
+ehree.codes[40011] = 优惠券只存在可使用/已使用/已过期的情况
+ehree.codes[40012] = 优惠券核销失败
 
-ehree.codes[50000] = \u8BA2\u5355\u901A\u7528\u7C7B\u9519\u8BEF
-ehree.codes[50001] = \u8BA2\u5355\u4E2D\u6709\u5546\u54C1\u5DF2\u552E\u7F44
-ehree.codes[50002] = \u8BA2\u5355\u4E2D\u6709\u5DF2\u4E0B\u67B6\u5546\u54C1
-ehree.codes[50003] = \u8BA2\u5355\u4E2D\u6709\u5546\u54C1\u5E93\u5B58\u4E0D\u8DB3
-ehree.codes[50004] = \u8BA2\u5355\u4E2D\u6709\u5546\u54C1\u8D85\u51FA\u4E86\u8D2D\u4E70\u4E0A\u9650
-ehree.codes[50005] = \u8BA2\u5355\u91D1\u989D\u4E0E\u5B9E\u9645\u91D1\u989D\u4E0D\u5339\u914D,\u53EF\u80FD\u67D0\u4E9B\u5546\u54C1\u4EF7\u683C\u6709\u6D6E\u52A8
-ehree.codes[50006] = \u7528\u6237\u6CA1\u6709\u8FD9\u5F20\u4F18\u60E0\u5238
-ehree.codes[50007] = \u8BA2\u5355\u4E2D\u7684\u5546\u54C1\u6570\u91CF\u4E0D\u80FD\u662F0\u4EF6
-ehree.codes[50008] = \u8BA2\u5355\u4F18\u60E0\u91D1\u989D\u4E0E\u5B9E\u9645\u4F18\u60E0\u91D1\u989D\u4E0D\u5339\u914D
-ehree.codes[50009] = \u8BA2\u5355\u4E0D\u5B58\u5728
-ehree.codes[50010] = \u8BA2\u5355\u5DF2\u8FC7\u671F
-ehree.codes[50011] = \u5546\u54C1\u5E76\u4E0D\u514D\u8D39~
+ehree.codes[50000] = 订单通用类错误
+ehree.codes[50001] = 订单中有商品已售罄
+ehree.codes[50002] = 订单中有已下架商品
+ehree.codes[50003] = 订单中有商品库存不足
+ehree.codes[50004] = 订单中有商品超出了购买上限
+ehree.codes[50005] = 订单金额与实际金额不匹配,可能某些商品价格有浮动
+ehree.codes[50006] = 用户没有这张优惠券
+ehree.codes[50007] = 订单中的商品数量不能是0件
+ehree.codes[50008] = 订单优惠金额与实际优惠金额不匹配
+ehree.codes[50009] = 订单不存在
+ehree.codes[50010] = 订单已过期
+ehree.codes[50011] = 我们商品并不免费~
